kustomize-ocp4/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: mock-ec-prf
  name: mock-ec-prf
