kustomize-ocp4/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-ec-prf
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    spec:
      restartPolicy: Always
      containers:
        - name: mock-ec-prf
          image: mock-ec-prf-image
          imagePullPolicy: Never
          ports:
            - name: mock-ec-prf
              containerPort: 8484
              protocol: TCP
          resources:
            requests:
              memory: 1Gi
              cpu: 300m
            limits:
              memory: 2Gi
              cpu: 400m
